k8s/istio/mtls.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: app
  namespace: app
spec:
  mtls:
    mode: PERMISSIVE
