k8s/istio/custom.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    istio: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP
    hosts:
    - "akg.xyz"
    - "*.akg.xyz"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "akg.xyz"
    - "*.akg.xyz"
    # mount from volume or directory of RaspPi host
    tls:
      mode: SIMPLE
      credentialName: letsencrypt-cert
      minProtocolVersion: TLS_AUTO
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: app
  namespace: app
spec:
  mtls:
    mode: STRICT
